--- a/.github/workflows/pipeline-build-main.yml
+++ b/.github/workflows/pipeline-build-main.yml
@@ -14,9 +14,15 @@ jobs:
       uses: actions/setup-dotnet@v3
       with:
         dotnet-version: 8.0.x       
-     
-    - name: Setup DotNet Coverage   
-      run: dotnet tool update dotnet-coverage --tool-path ./
+
+    - name: Setup Java
+      uses: actions/setup-java@v4.0.0
+      with:        
+        java-version: 17
+        distribution: temurin
+        
+    - name: Setup SonarCloud Scanner      
+      run: dotnet tool update dotnet-sonarscanner --tool-path ./.sonar/scanner
       working-directory: src
 
     - name: Test and analyze
@@ -24,10 +30,13 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}      
       run: |
-        dotnet sonarscanner begin /k:"${{ secrets.PROJECT_KEY }}" /o:"${{ secrets.SONAR_ORGANIZATION }}" /d:sonar.host.url="https://sonarcloud.io" /d:sonar.token="${{ secrets.SONAR_TOKEN }}" /d:sonar.cs.vscoveragexml.reportsPaths=coverage.xml
-        dotnet restore
-        dotnet build --configuration Release --no-restore
-        dotnet-coverage collect "dotnet test" -f xml -o "coverage.xml"
+        ./.sonar/scanner/dotnet-sonarscanner begin /k:"${{ secrets.PROJECT_KEY }}" /o:"${{ secrets.SONAR_ORGANIZATION }}" /d:sonar.host.url="https://sonarcloud.io" 
+        
+        dotnet test /p:CollectCoverage=true /p:CoverletOutputFormat=opencover -l trx
 
-        dotnet sonarscanner end /d:sonar.token="${{ secrets.SONAR_TOKEN }}"
+        ./.sonar/scanner/dotnet-sonarscanner end
+      working-directory: src
+  
+    - name: Build
+      run: dotnet build --configuration Release --no-restore
       working-directory: src
