--- a/.github/workflows/pipeline-build-main.yml
+++ b/.github/workflows/pipeline-build-main.yml
@@ -7,39 +7,18 @@ on:
       - main
 
 jobs:
-  buildTest:
-    runs-on: windows-latest    
+  build:
+    name: Build
+    runs-on: windows-latest
     steps:
-    
-    - uses: actions/checkout@v3
-    
-    - name: Setup .NET
-      uses: actions/setup-dotnet@v3
-      with:
-        dotnet-version: 8.0.x       
+      - name: Build
+        run: |
+          dotnet tool install --global dotnet-coverage
 
-    - name: Setup Java
-      uses: actions/setup-java@v4.0.0
-      with:        
-        java-version: 17
-        distribution: temurin
-        
-    - name: Setup SonarCloud Scanner      
-      run: dotnet tool update dotnet-sonarscanner --tool-path ./.sonar/scanner
-      working-directory: src
+          [jdk setup]
 
-    - name: Test and analyze
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}      
-      run: |
-        ./.sonar/scanner/dotnet-sonarscanner begin /k:"${{ secrets.PROJECT_KEY }}" /o:"${{ secrets.SONAR_ORGANIZATION }}" /d:sonar.host.url="https://sonarcloud.io" /d:sonar.cs.vscoveragexml.reportsPaths="coverage.opencover.xml" /d:sonar.exclusions="**.Database/**,**.Tests/**,**.Common*/**"
-        
-        dotnet test /p:CollectCoverage=true /p:CollectCoverage=true /p:CoverletOutputFormat=opencover --logger trx
-
-        ./.sonar/scanner/dotnet-sonarscanner end
-      working-directory: src
-  
-    - name: Build
-      run: dotnet build --configuration Release --no-restore
-      working-directory: src
+          .\.sonar\scanner\dotnet-sonarscanner begin /k:"${{ secrets.PROJECT_KEY }}" /o:"${{ secrets.SONAR_ORGANIZATION }}" /d:sonar.login="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="https://sonarcloud.io" /d:sonar.cs.vscoveragexml.reportsPaths=coverage.xml
+          dotnet build --configuration Release
+          dotnet-coverage collect 'dotnet test' -f xml -o 'coverage.xml'
+          .\.sonar\scanner\dotnet-sonarscanner end /d:sonar.login="${{ secrets.SONAR_TOKEN }}"
+        working-directory: src
