--- a/.github/workflows/pipeline-build-main.yml
+++ b/.github/workflows/pipeline-build-main.yml
@@ -11,14 +11,19 @@ jobs:
     name: Build
     runs-on: windows-latest
     steps:
-      - name: Build
-        run: |
-          dotnet tool install --global dotnet-coverage
-
-          [jdk setup]
-
+    - name: Setup Java
+      uses: actions/setup-java@v4.0.0
+      with:        
+        java-version: 17
+        distribution: temurin
+        
+    - name: Setup SonarCloud Scanner      
+      run: dotnet tool install --global dotnet-coverage --tool-path ./.sonar/scanner
+      working-directory: src
+    - name: Build
+      run: |          
           .\.sonar\scanner\dotnet-sonarscanner begin /k:"${{ secrets.PROJECT_KEY }}" /o:"${{ secrets.SONAR_ORGANIZATION }}" /d:sonar.login="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="https://sonarcloud.io" /d:sonar.cs.vscoveragexml.reportsPaths=coverage.xml
           dotnet build --configuration Release
           dotnet-coverage collect 'dotnet test' -f xml -o 'coverage.xml'
           .\.sonar\scanner\dotnet-sonarscanner end /d:sonar.login="${{ secrets.SONAR_TOKEN }}"
-        working-directory: src
+      working-directory: src
