--- a/.github/workflows/pipeline-build-main.yml
+++ b/.github/workflows/pipeline-build-main.yml
@@ -11,6 +11,9 @@ jobs:
     name: Build
     runs-on: windows-latest
     steps:
+
+    - uses: actions/checkout@v3
+    
     - name: Setup Java
       uses: actions/setup-java@v4.0.0
       with:        
