--- a/.github/workflows/pipeline-build-main.yml
+++ b/.github/workflows/pipeline-build-main.yml
@@ -13,6 +13,21 @@ jobs:
     steps:
 
     - uses: actions/checkout@v3
+    
+    - name: Setup .NET
+      uses: actions/setup-dotnet@v3
+      with:
+        dotnet-version: 8.0.x       
+
+    - name: Setup Java
+      uses: actions/setup-java@v4.0.0
+      with:        
+        java-version: 17
+        distribution: temurin
+        
+    - name: Setup SonarCloud Scanner      
+      run: dotnet tool update dotnet-sonarscanner --tool-path ./.sonar/scanner
+      working-directory: src
                
     - name: Build
       run: |          
