--- a/.github/workflows/pipeline-build-main.yml
+++ b/.github/workflows/pipeline-build-main.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   build:
-    name: Build
+    name: BuildTest
     runs-on: windows-latest
     steps:
 
@@ -17,7 +17,7 @@ jobs:
     - name: Setup .NET
       uses: actions/setup-dotnet@v4
       with:
-        dotnet-version: 9.0.x       
+        dotnet-version: 8.0.x       
 
     - name: Setup Java
       uses: actions/setup-java@v4
