--- a/src/Api.Common.Repository.EFCore.Tests/Api.Common.Repository.EFCoreTests.csproj
+++ b/src/Api.Common.Repository.EFCore.Tests/Api.Common.Repository.EFCoreTests.csproj
@@ -2,15 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
-    <TargetLatestRuntimePatch>true</TargetLatestRuntimePatch>
-    <ProjectGuid>{90F5788F-89A2-4593-B433-3628315A8146}</ProjectGuid>
   </PropertyGroup>
-
-  <ItemGroup>
-    <Compile Remove="Migrations\**" />
-    <EmbeddedResource Remove="Migrations\**" />
-    <None Remove="Migrations\**" />
-  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Autofac" Version="8.0.0" />
@@ -18,10 +10,10 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="EntityFramework" Version="6.5.1" />
     <PackageReference Include="FluentAssertions" Version="6.12.0" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="8.0.8" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.10.0" />
-    <PackageReference Include="NUnit" Version="4.1.0" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.11.0" />
+    <PackageReference Include="NUnit" Version="4.2.1" />
     <PackageReference Include="NUnit.Console" Version="3.18.1" />
     <PackageReference Include="NUnit.ConsoleRunner" Version="3.18.1" />
     <PackageReference Include="NUnit.Runners" Version="3.12.0" />
@@ -29,15 +21,15 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+        
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\AmberEggApi.WebApi\AmberEggApi.WebApi.csproj" />
-    <ProjectReference Include="..\Api.Common.Contracts\Api.Common.Contracts.csproj" />
     <ProjectReference Include="..\AmberEggApi.ApplicationService\AmberEggApi.ApplicationService.csproj" />
-    <ProjectReference Include="..\AmberEggApi.Database\AmberEggApi.Database.csproj" />
+    <ProjectReference Include="..\AmberEggApi.Domain.Tests\AmberEggApi.DomainTests.csproj" />
     <ProjectReference Include="..\AmberEggApi.Domain\AmberEggApi.Domain.csproj" />
     <ProjectReference Include="..\AmberEggApi.Infrastructure\AmberEggApi.Infrastructure.csproj" />
+    <ProjectReference Include="..\Api.Common.Repository.Contracts.Core\Api.Common.Repository.csproj" />
   </ItemGroup>
 
 </Project>
