- add Central Package Version Management - update packages versions - replace Swagger for OpenAPI lib

--- a/src/AmberEggApi.Domain/AmberEggApi.Domain.csproj
+++ b/src/AmberEggApi.Domain/AmberEggApi.Domain.csproj
@@ -1,14 +1,12 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net9.0</TargetFramework>
-    <TargetLatestRuntimePatch>true</TargetLatestRuntimePatch>
+  <PropertyGroup>    
     <ProjectGuid>{F60EBC60-4C92-4C01-947C-2F9ED18A3B18}</ProjectGuid>
   </PropertyGroup> 
 
   <ItemGroup>    
-    <PackageReference Include="Autofac" Version="8.2.0" />    
-    <PackageReference Include="AutoMapper" Version="14.0.0" />
+    <PackageReference Include="Autofac" />    
+    <PackageReference Include="AutoMapper"/>
   </ItemGroup> 
 
   <ItemGroup>
