--- a/src/AmberEggApi.ApplicationService/AmberEggApi.ApplicationService.csproj
+++ b/src/AmberEggApi.ApplicationService/AmberEggApi.ApplicationService.csproj
@@ -1,14 +1,12 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net9.0</TargetFramework>
-    <TargetLatestRuntimePatch>true</TargetLatestRuntimePatch>
+  <PropertyGroup>    
     <ProjectGuid>{EB0AC643-8245-4992-80D5-24E7AD64C821}</ProjectGuid>
   </PropertyGroup>  
 
   <ItemGroup>   
-    <PackageReference Include="Autofac" Version="8.2.0" />
-    <PackageReference Include="AutoMapper" Version="14.0.0" />
+    <PackageReference Include="Autofac" />
+    <PackageReference Include="AutoMapper"/>
   </ItemGroup>
 
   <ItemGroup>
