--- a/src/Api.Common.Repository.EFCore.Tests/Api.Common.Repository.EFCoreTests.csproj
+++ b/src/Api.Common.Repository.EFCore.Tests/Api.Common.Repository.EFCoreTests.csproj
@@ -5,24 +5,16 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Autofac" Version="8.2.0" />
-    <PackageReference Include="Azure.Identity" Version="1.13.2" />
-    <PackageReference Include="coverlet.msbuild" Version="6.0.4">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
-    <PackageReference Include="EntityFramework" Version="6.5.1" />
-    <PackageReference Include="FluentAssertions" Version="8.2.0" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.13.0" />
-    <PackageReference Include="NUnit" Version="4.3.2" />
-    <PackageReference Include="NUnit.Console" Version="3.19.2" />
-    <PackageReference Include="NUnit.ConsoleRunner" Version="3.19.2" />
-    <PackageReference Include="NUnit.Runners" Version="3.12.0" />
-    <PackageReference Include="NUnit3TestAdapter" Version="5.0.0">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
-        
+	  <PackageReference Include="FluentAssertions" />
+	  <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" />
+	  <PackageReference Include="Microsoft.AspNetCore.TestHost" />
+	  <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" />
+	  <PackageReference Include="Microsoft.NET.Test.Sdk" />
+	  <PackageReference Include="NUnit" />
+	  <PackageReference Include="NUnit.Console" />
+	  <PackageReference Include="NUnit.ConsoleRunner" />
+	  <PackageReference Include="NUnit.Runners" />
+	  <PackageReference Include="NUnit3TestAdapter" />        
   </ItemGroup>
 
   <ItemGroup>
