--- a/src/Api.Common.Repository.EFCore/Api.Common.Repository.EFCore.csproj
+++ b/src/Api.Common.Repository.EFCore/Api.Common.Repository.EFCore.csproj
@@ -1,13 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-	<PropertyGroup>
-		<TargetFramework>net9.0</TargetFramework>		
-		<TargetLatestRuntimePatch>true</TargetLatestRuntimePatch>
+	<PropertyGroup>		
 		<ProjectGuid>{949EA0A5-5AA1-442C-9EA7-2A9663942977}</ProjectGuid>
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.3" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore"/>
 	</ItemGroup>
 
 	<ItemGroup>
