--- a/src/Directory.Packages.props
+++ b/src/Directory.Packages.props
@@ -28,14 +28,8 @@
 	<PackageVersion Include="Microsoft.OpenApi" Version="1.6.14" /> 
 	<PackageVersion Include="Microsoft.AspNetCore.OpenApi" Version="9.0.0-preview.5.24306.11" />
 	<PackageVersion Include="NSwag.AspNetCore" Version="14.1.0" /> 
-	<PackageVersion Include="Microsoft.EntityFrameworkCore.InMemory" Version="9.0.6" />
-	<PackageVersion Include="NUnit" Version="4.3.2" />
-    <PackageVersion Include="NUnit.Console" Version="3.20.1" />
-    <PackageVersion Include="NUnit.ConsoleRunner" Version="3.20.1" />
-    <PackageVersion Include="NUnit.Runners" Version="3.12.0" />
-    <PackageVersion Include="NUnit3TestAdapter" Version="5.0.0">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageVersion>
+	<PackageVersion Include="Microsoft.EntityFrameworkCore.InMemory" Version="9.0.6" /> 
+	<PackageVersion Include="xunit" Version="2.9.3" /> 
+	<PackageVersion Include="xunit.runner.visualstudio" Version="3.1.1" />	
   </ItemGroup>
 </Project>
