--- a/src/Api.Common.Cqrs.Core/Api.Common.Cqrs.Core.csproj
+++ b/src/Api.Common.Cqrs.Core/Api.Common.Cqrs.Core.csproj
@@ -4,4 +4,8 @@
     <ProjectGuid>{2353976C-7698-4D15-8C04-6EB55CD6E8EE}</ProjectGuid>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Api.Common.Contracts\Api.Common.Contracts.csproj" />
+  </ItemGroup>
+
 </Project>
