--- a/src/AmberEggApi.Domain/AmberEggApi.Domain.csproj
+++ b/src/AmberEggApi.Domain/AmberEggApi.Domain.csproj
@@ -6,12 +6,11 @@
 
   <ItemGroup>    
     <PackageReference Include="Autofac" />    
-    <PackageReference Include="AutoMapper"/>
+    <PackageReference Include="AutoMapper" />
   </ItemGroup> 
 
   <ItemGroup>
-    <ProjectReference Include="..\Api.Common.Cqrs.Core\Api.Common.Cqrs.Core.csproj" />
-    <ProjectReference Include="..\Api.Common.Repository.Contracts.Core\Api.Common.Repository.csproj" />
+    <ProjectReference Include="..\Api.Common.Contracts\Api.Common.Contracts.csproj" />
   </ItemGroup>
   
 </Project>
