--- a/src/Api.Common.Repository.EFCore/Api.Common.Repository.EFCore.csproj
+++ b/src/Api.Common.Repository.EFCore/Api.Common.Repository.EFCore.csproj
@@ -5,11 +5,11 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.EntityFrameworkCore"/>
+		<PackageReference Include="Microsoft.EntityFrameworkCore" />
 	</ItemGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\Api.Common.Repository.Contracts.Core\Api.Common.Repository.csproj" />
+	  <ProjectReference Include="..\Api.Common.Contracts\Api.Common.Contracts.csproj" />
 	</ItemGroup>
 
 </Project>
