--- a/src/AmberEggApi.Database/AmberEggApi.Database.csproj
+++ b/src/AmberEggApi.Database/AmberEggApi.Database.csproj
@@ -25,4 +25,10 @@
 		<Folder Include="Migrations\" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <None Update="appsettings.json">
+	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+	  </None>
+	</ItemGroup>
+
 </Project>
