--- a/.github/workflows/pipeline-build-main.yml
+++ b/.github/workflows/pipeline-build-main.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   build:
     name: BuildTest
-    runs-on: linux-latest
+    runs-on: ubuntu-latest
     steps:
 
     - uses: actions/checkout@v4
