--- a/src/AmberEggApi.Repository.EFCore.Tests/AmberEggApi.Repository.EFCoreTests.csproj
+++ b/src/AmberEggApi.Repository.EFCore.Tests/AmberEggApi.Repository.EFCoreTests.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+	  <PackageReference Include="Autofac.Extensions.DependencyInjection" />
 	  <PackageReference Include="FluentAssertions" />
 	  <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" />
 	  <PackageReference Include="Microsoft.AspNetCore.TestHost" />
