--- a/src/AmberEggApi.Repository.EFCore/AmberEggApi.Repository.EFCore.csproj
+++ b/src/AmberEggApi.Repository.EFCore/AmberEggApi.Repository.EFCore.csproj
@@ -5,6 +5,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Autofac.Extensions.DependencyInjection" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore" />
 	</ItemGroup>
 
